<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Confirmacion"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvConfirmar"

        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:paddingTop="16dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvFecha"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/resFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="nombre"
            android:paddingLeft="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvTel"
            android:textColor="#000000"
            />

        <TextView
            android:id="@+id/resTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="tel"
            android:paddingLeft="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvEmail"
            android:textColor="#000000"
            />

        <TextView
            android:id="@+id/resEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="d@hotmail"
            android:paddingLeft="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvDescripcion"
            android:textColor="#000000"
            />

        <TextView
            android:id="@+id/resDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Soy una descripción"
            android:paddingLeft="16dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEditar"
        />


</LinearLayout>